# cargo-features = ["edition2024"]

[package]
name = "hal"
version = "0.0.0"
edition = "2021"
authors = ["Fangliang Zhao <1491657576@qq.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
documentation = "https://arceos-org.github.io/arceos"
repository = "https://github.com/arceos-org/arceos"
keywords = ["vdso", "task scheduling"]
categories = ["os", "no-std"]


[features]
tls = []
uspace = []

[dependencies]
linkme = "0.3"
cfg-if = "1.0"
memory_addr = "0.4"
page_table_entry = "0.5.7"
static_assertions = "1.1.0"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "10.0"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.14"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.15.2"
